ares/deployments/branch/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ares-branch
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
  selector:
    matchLabels:
      app: postgres
