ares/deployments/branch/ares-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ares
  namespace: ares-branch
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 8000
      protocol: TCP
  selector:
    app: ares
