ares/deployments/branch/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ares-branch
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 5432
      protocol: TCP
  selector:
    app: postgres
